api-gw-fed/resources/waypoints/gloo-waypoint-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  annotations:
    ambient.istio.io/waypoint-inbound-binding: PROXY/15088
  generation: 1
  labels:
    gloo: kube-gateway
  name: gloo-waypoint
spec:
  controllerName: solo.io/gloo-gateway
