api-gw-fed/resources/waypoints/purchase-history-httproute-jwt.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: purchase-history
  namespace: purchase-history
spec:
  parentRefs:
  - name: purchase-history-gloo-waypoint
  rules:
  - filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.solo.io
        kind: RouteOption
        name: purchase-history-route-options

    backendRefs:
    - name: purchase-history-v1
      port: 8080
      weight: 100
