api-gw-fed/resources/waypoints/purchase-history-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: purchase-history
  namespace: purchase-history
spec:
  parentRefs:
  - name: purchase-history-gloo-waypoint
  rules:
  - filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: Traversed-Waypoint
          value: purchase-history-gloo-waypoint
    backendRefs:
    - name: purchase-history-v1
      port: 8080
      weight: 100
