api-gw-fed/resources/waypoints/web-api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: web-api
  namespace: web-api
spec:
  parentRefs:
  - name: web-api-gloo-waypoint
  rules:
  - filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: Traversed-Waypoint
          value: web-api-gloo-waypoint
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: jwt
          value: dummy-jwt
    backendRefs:
    - name: web-api
      port: 8080
